// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards should match the snapshot with all data passed in correctly 1`] = `
<div
  className="Cards"
>
  <Card
    homeworld="Kamino"
    id="David1566829833327"
    isFavorite="false"
    key="David1566829833327"
    name="David"
    population={20}
    species="wookie"
  />
  <Card
    homeworld="Tatooine"
    id="Eric1566829833327"
    isFavorite="false"
    key="Eric1566829833327"
    name="Eric"
    population={42}
    species="human"
  />
</div>
`;

exports[`Cards should match the snapshot with all data passed in correctly 2`] = `
<div
  className="Cards"
>
  <Card
    climate="temperate"
    id="Tatooine1566829833331"
    isFavorite="false"
    key="Tatooine1566829833331"
    name="Tatooine"
    population={200}
    residents={
      Array [
        "Travis",
        "Robbie",
      ]
    }
    terrain="grasslands, mountains"
  />
  <Card
    climate="temperate"
    id="Coruscant1566829833331"
    isFavorite="false"
    key="Coruscant1566829833331"
    name="Coruscant"
    population={42}
    residents={
      Array [
        "Steve",
        "Paul",
      ]
    }
    terrain="desert"
  />
</div>
`;

exports[`Cards should match the snapshot with all data passed in correctly 3`] = `
<div
  className="Cards"
>
  <Card
    id="Toyota Corolla1566829833333"
    isFavorite="false"
    key="Toyota Corolla1566829833333"
    model="sedan"
    name="Toyota Corolla"
  />
  <Card
    id="Sand Crawler1566829833333"
    isFavorite="false"
    key="Sand Crawler1566829833333"
    model="Digger Crawler"
    name="Sand Crawler"
  />
</div>
`;

exports[`Cards should match the snapshot with all data passed in correctly 4`] = `
<div
  className="Cards"
>
  <Card
    homeworld="Kamino"
    id="David1566829833334"
    isFavorite="true"
    key="David1566829833334"
    name="David"
    population={20}
    species="wookie"
  />
  <Card
    homeworld="Tatooine"
    id="Eric1566829833334"
    isFavorite="true"
    key="Eric1566829833334"
    name="Eric"
    population={42}
    species="human"
  />
  <Card
    id="Toyota Corolla1566829833334"
    isFavorite="true"
    key="Toyota Corolla1566829833334"
    model="sedan"
    name="Toyota Corolla"
  />
</div>
`;
